fix: ajuste nos testes e readme